test_regress/t/t_trace_dumpvars_t.out
%Error: t/t_trace_dumpvars_t.v:28:15: Can't find definition of variable: 't'
   28 |     $dumpvars(t);
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
